syntax = "proto3";

service NamingService {
    rpc Lookup(LookupResquest) returns (LookupResponse);
}

message LookupRequest {
    int32 server_id = 1;
}

message LookupResponse {
    string server_url = 1;
}